fixed red errors on sonar cube