@@ -64,7 +64,7 @@ public class ValidationStatusControllerImpl implements PscExtensionValidationSta
             final List<String> missingFields = Stream.of(
                     pscExtension.getData().getCompanyNumber() == null ? "companyNumber" : null,
                     pscExtension.getData().getPscNotificationId() == null ? "pscNotificationId" : null
-            ).filter(Objects::nonNull).collect(Collectors.toList());
+            ).filter(Objects::nonNull).toList();
 
             final var errorMessage = String.format("Missing fields when validating filing for %s: %s",
                     filingResourceId, String.join(", ", missingFields));
